update model & notation to look better on web

--- a/ToyExample.ipynb
+++ b/ToyExample.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Producer's problem\n",
+    "Oil producer's problem\n",
     "$$\n",
     "    \\pi = \\max \\begin{cases}\n",
     "        \\overbrace{R_o + R_g}^{R_t}  - c_g & \\text{ gather}\\\\\n",
@@ -12,11 +12,16 @@
     "        V_a & \\text{ alternative}\n",
     "        \\end{cases}\n",
     "$$\n",
-    "\\begin{align}\n",
-    "Flare &\\succsim Gather   & \\iff & &   (c_f+\\tau) \\geq c_g - R_g \\\\\n",
-    "Alt &\\succsim Gather   & \\iff & &  V_a        \\geq R_o + R_g - c_g \\\\\n",
-    "Alt & \\succsim Flare  & \\iff & &  V_a        \\geq R_o - (c_f + \\tau)\n",
-    "\\end{align}\n",
+    "We then have\n",
+    "$$\n",
+    "Flare \\succsim Gather  \\iff   (c_f+\\tau) \\geq c_g - R_g\n",
+    "$$\n",
+    "$$\n",
+    "Alt   \\succsim Gather  \\iff  V_a        \\geq R_o + R_g - c_g\n",
+    "$$\n",
+    "$$\n",
+    "Alt    \\succsim Flare  \\iff  V_a        \\geq R_o - (c_f + \\tau)\n",
+    "$$\n",
     "\n",
     "Define indifference thresholds\n",
     "$$\n",
@@ -51,11 +56,15 @@
     "$$\n",
     "    c_g = \\kappa'(G)\n",
     "$$\n",
-    "But in a monopolistic case, FOC imply\n",
+    "But in a monopolistic case, FOC imply a markup\n",
     "$$\n",
-    "    c_g + \\underbrace{\\frac{G}{G'}}_{<0} = \\kappa'(G)\n",
+    "    c_g = \\kappa'(G) - \\underbrace{\\frac{G}{G'}}_{<0} > \\kappa'(G)\n",
     "$$\n",
-    "Under a constant MC, $\\kappa(G) = \\kappa_0 G$, we end up with a quadratic function of $c_g^*$, and then we solve for the lower quadratic root. The algebra is awful to sign $\\frac{d c_g}{d\\tau}$ under monopolistic competition... so I do it numerically."
+    "Under a constant MC, $\\kappa(G) = \\kappa_0 G$, we end up with a quadratic function of $c_g^*$, and then we solve for the lower quadratic root. The algebra is awful to sign $\\frac{d c_g}{d\\tau}$ under monopolistic competition... so I do it numerically.\n",
+    "\n",
+    "Monopolistic behavior results in a MUCH bigger markup on processing, and more flaring. When we impose a tax, the monopolist actually *increases* the price of its services.\n",
+    "\n",
+    "The \"outside option\" $V^a$ will include other processors... so we can think about this model as a case of a Nash-Bertrand equilibrium a price-setting game with monopolistic competition (as one would do in BLP...). Practically speaking, we could think about a processor on a network who knows they face a downward-sloping demand curve because the wells close to them are unlikely to switch to an alternative, far-away processor if the processor raises the price a bit."
    ]
   },
   {
