--- a/ToyExample.ipynb
+++ b/ToyExample.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Oil producer's problem\n",
+    "# Model\n",
+    "\n",
+    "## Oil producer's problem\n",
+    "\n",
     "$$\n",
     "    \\pi = \\max \\begin{cases}\n",
     "        \\overbrace{R_o + R_g}^{R_t}  - c_g & \\text{ gather}\\\\\n",
@@ -48,7 +51,8 @@
     "A = \\bar c_f(\\bar V_a - V_a^*) - \\frac 1 2 (c_f^*)^2 \\qquad A' = (\\bar c_f - c_f^*)\n",
     "$$\n",
     "\n",
-    "Processor profits are\n",
+    "## Processor profits\n",
+    "\n",
     "$$\n",
     "    W = c_g G - \\kappa(G)\n",
     "$$\n",
@@ -62,9 +66,39 @@
     "$$\n",
     "Under a constant MC, $\\kappa(G) = \\kappa_0 G$, we end up with a quadratic function of $c_g^*$, and then we solve for the lower quadratic root. The algebra is awful to sign $\\frac{d c_g}{d\\tau}$ under monopolistic competition... so I do it numerically.\n",
     "\n",
+    "## Analysis\n",
+    "\n",
     "Monopolistic behavior results in a MUCH bigger markup on processing, and more flaring. When we impose a tax, the monopolist actually *increases* the price of its services.\n",
     "\n",
     "The \"outside option\" $V^a$ will include other processors... so we can think about this model as a case of a Nash-Bertrand equilibrium a price-setting game with monopolistic competition (as one would do in BLP...). Practically speaking, we could think about a processor on a network who knows they face a downward-sloping demand curve because the wells close to them are unlikely to switch to an alternative, far-away processor if the processor raises the price a bit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Installaion of package\n",
+    "\n",
+    "Install `ToyFlaringModel.jl` in Julia, and then \"instantiate\" it to install dependencies\n",
+    "Note that the `]` will put Julia into \"package\" mode, so you won't need the second `]`\n",
+    "\n",
+    "```julia\n",
+    "]dev https://github.com/magerton/ToyFlaringModel.jl\n",
+    "]instantiate ToyFlaringModel\n",
+    "```\n",
+    "\n",
+    "# Installing Jupyter notebooks\n",
+    "\n",
+    "To run this notebook, you'll need to install IJulia (see https://github.com/JuliaLang/IJulia.jl). \n",
+    "\n",
+    "Once you install Julia, you'll need to install IJulia with `]add IJulia`. Then open up the Julia command line and ask for a Jupyter notebook\n",
+    "\n",
+    "```julia\n",
+    "using IJulia\n",
+    "jupyterlab()\n",
+    "```\n",
+    "\n",
+    "You can also create a shortcut on Windows. For example, my shortcut `Target` is `D:\\libraries\\julia\\conda\\3\\Scripts\\jupyter-lab.exe`, and the `Start in` location is `E:\\projects\\`"
    ]
   },
   {
@@ -84,8 +118,6 @@
     }
    ],
    "source": [
-    "# Install ToyFlaringModel as\n",
-    "# dev https://github.com/magerton/ToyFlaringModel.jl\n",
     "using ToyFlaringModel\n",
     "using Plots\n",
     "gr(fmt=:png)"
