update for linebreaks

--- a/ToyExample.ipynb
+++ b/ToyExample.ipynb
@@ -41,16 +41,19 @@
     "\\frac{d V_a^*}{d \\tau} = 0 \n",
     "$$\n",
     "\n",
-    "Assume that flaring costs & outside options are uniformly distributed w/ mass equal to upper limit: $c_f \\sim  \\bar c_f \\times U(0, \\bar c_f)$ and $V_a \\sim \\times \\bar V_a U(0,\\bar V_a)$. Then quantities for gathering ($G$), flaring ($F$), and the outside/alternative option ($A$) are\n",
+    "Assume that flaring costs & outside options are uniformly distributed w/ mass equal to upper limit: $c_f \\sim  \\bar c_f \\times U(0, \\bar c_f)$ and $V_a \\sim \\times \\bar V_a U(0,\\bar V_a)$. Then quantities outcomes and derivatives wrt $c_g$ are the follwoing:\n",
     "\n",
+    "Gathering -\n",
     "$$\n",
     "G = V_a^*(\\bar c_f - c_f^*) \\qquad G' = -[V_a^* + (\\bar c_f - c_f^*)]\n",
     "$$\n",
     "\n",
+    "Flaring - \n",
     "$$\n",
     "F = c_f^*[V_a^* + \\frac 1 2 c_f^*] \\qquad F' = V_a^*\n",
     "$$\n",
     "\n",
+    "Alternative/Outside Option\n",
     "$$\n",
     "A = \\bar c_f(\\bar V_a - V_a^*) - \\frac 1 2 (c_f^*)^2 \\qquad A' = (\\bar c_f - c_f^*)\n",
     "$$\n",
